# repods-gpt

./: crud.py  main.py  pyproject.toml  utils.py
.streamlit/: config.toml
pages/: 1_page1.py  2_page2.py  3_page3.py  4_admin.py  4_page4.py  5_admin.py  5_page10.py
prompts/: prompt-page1.txt  prompt-page2.txt  prompt-page3.txt  prompt-page4.txt
