[project]
name = "repods-gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "jimin52",email = "jimin42.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "streamlit (>=1.43.0,<2.0.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "boto3 (>=1.37.9,<2.0.0)",
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
